--- a/inst/NEWS
+++ b/inst/NEWS
@@ -9,8 +9,26 @@ Version 1.2 (TODO)
 * Different parametric families are now supported for different
   transitions in multi-state models.
 
-* Hence the return value from pars.fmsm is now a list rather than a matrix,
-  even if the model family is the same for each transition.
+* New multi-state model constructor "fmsm" which allows a list of
+  flexsurvreg objects to be associated with a particular transition
+  structure matrix.
+
+* qgeneric is now vectorised, thanks to the vuniroot function imported
+  from the rstpm2 package by Mark Clements.  This massively boosts the
+  speed of rsurvspline, hence speeding up simulations from
+  spline-based multi-state models.
+
+* pmatrix.fs can now calculate transition probabilities conditionally
+  on the the transition being to one of a subset of the states.
+
+* "tidy" argument to pmatrix.fs for tidy data frame output. 
+
+* "tidy" argument to sim.fmsm for returning simulations in tidy data
+  frame format with one row per transition, and associated function
+  simfs_bytrans. 
+
+* Return value from pars.fmsm is now a list rather than a matrix, even
+  if the model family is the same for each transition.
 
 
 Version 1.1.1 (2019-03-18)
